tests/run/error_unknown_interface.ig
// error_unknown_interface.ig — implementing an interface that doesn't exist.
struct V implements Nope { n: int }
fn main() -> int { return 0 }
